refactor:LMS-8 use mapper functions to create response and add saveall to reduce complexity